Añadir informe pdf composición corporal y observaciones pautas fijas
